--- a/src/pages/CharacterDetails/styles.scss
+++ b/src/pages/CharacterDetails/styles.scss
@@ -11,9 +11,12 @@
     justify-content: center;
     height: 100%;
     padding: 0;
-    margin: 16px;
+    margin: 16px 0px 16px 0px;
+    margin-top: 16px;
     margin-top: 48px;
     gap: 28px;
+    max-width: 1120px;
+    width: calc(100% - 48px);
 
     .navigation--navigationContainer {
         align-self: flex-start;
@@ -46,17 +49,7 @@
 .character-details {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-.character-name-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 24px;
     width: 100%;
-    align-self: flex-start;
 }
 
 .character-name {
@@ -80,7 +73,7 @@
 .character-info-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 24px;
     width: 100%;
 }
@@ -89,11 +82,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
     flex-wrap: wrap;
     max-width: 760px;
     gap: 24px;
-    flex: 1 0 auto;
+    width: 60%;
+    flex-wrap: wrap;
+}
+
+.character__info__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: calc(50% - 12px);
 }
 
 .character-image {
@@ -117,7 +118,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: calc(100% - 32px);
+    width: calc(100% - 48px);
     height: 100%;
     margin: 0;
     max-width: 1124px;
@@ -133,6 +134,7 @@
     height: 100%;
     padding: 0;
     margin: 0;
+    max-width: 1120px;
 }
 
 .character-episode-items-container {
@@ -229,6 +231,10 @@
     .character-info {
         gap: 8px;
         padding: 0px;
+    }
+
+    .character__info__item {
+        width: 100%;
     }
 
 }
