--- a/src/pages/CharacterEpisodes/styles.scss
+++ b/src/pages/CharacterEpisodes/styles.scss
@@ -66,6 +66,7 @@
     gap: 16px;
     padding: 52px;
     padding-top: 0px;
+    margin-top: 74px;
     max-height: 920px;
     max-width: 600px;
     overflow: scroll;
@@ -78,7 +79,7 @@
     box-sizing: border-box;
 }
 
-@media (max-width: 768px) {
+@media (max-width: $breakpoint-sm) {
     .characterEpisodes-main-container {
         flex-direction: column;
     }
@@ -108,4 +109,14 @@
         @include interText(700, 32px, 39px, $black);
     }
 
+}
+
+@media (max-width: $breakpoint-md) {
+    .characterEpisodes-character-name {
+        @include interText(700, 32px, 39px, $black);
+    }
+
+    .characterEpisodes-episode-list {
+        margin-top: 56px;
+    }
 }
