--- a/src/pages/Characters/styles.scss
+++ b/src/pages/Characters/styles.scss
@@ -15,8 +15,3 @@
     width: calc(100% - 32px);
     margin-top: 48px;
 }
-
-
-.characterList--image {
-    border-radius: 8px;
-}
