--- a/src/pages/EpisodeDetails/styles.scss
+++ b/src/pages/EpisodeDetails/styles.scss
@@ -308,6 +308,10 @@
     .episode-detailsPage-container {
         width: calc(100% - 32px);
     }
+
+    .episode-detailsPage-description {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: $breakpoint-sm) {
